Add kubernetes DNS

--- a/docs/Operation/kuber/AB/10.md
+++ b/docs/Operation/kuber/AB/10.md
@@ -1,6 +1,8 @@
 # 10. StateFulSets Storage
 
-## Storage Controller
+## Storage Providers
+
+### Storage Controller
 
 List of some useful storage controller
 
@@ -8,13 +10,52 @@ List of some useful storage controller
 - [OperatorSDK]
 - [Kudo]
 
-## Prometheus High Availability
+### Prometheus High Availability
 
 - [thanos]
 
-## Object Storage
+### Object Storage
 
 - [MinIO]
+
+### Cloud Storage Providers
+
+- [CloudProvider]
+
+#### OpenStack
+
+- [OpenStackCloud]
+
+## Networks
+
+- Cluster Networking
+- POD Networking
+- CNI in K8S
+- Service Networking
+- DNS in K8S
+- Ingress
+
+### Components Ports and Connections
+
+[List of Kubernetes Components Ports]
+
+### Pod Network
+
+#### CNI Standards
+
+- Each pod should have an IP address
+- Each pod should be able to communicate with every pod in the same node
+- Each pod should be able to communicate with every pod in the other nodes without NAT
+
+### KubeProxy
+
+KubeProxy use one of these three ways to handle traffic
+
+- **userspace**: use kubeproxy as a linux service, in this scenario we have to install kubeproxy binary
+
+- **iptables**: for lab envs and tiny production env
+
+- **ipvs**: for clusters that has more than 10,000 services
 
 <!-- links -->
 [MetaController]: https://metacontroller.github.io/metacontroller/
@@ -22,3 +63,6 @@ List of some useful storage controller
 [Kudo]: https://kudo.dev/
 [thanos]: https://thanos.io/
 [MinIO]: https://min.io/
+[OpenStackCloud]: https://github.com/kubernetes/cloud-provider-openstack
+[CloudProvider]: https://github.com/kubernetes/cloud-provider
+[List of Kubernetes Components Ports]: https://kubernetes.io/docs/reference/networking/ports-and-protocols/
