Update ingress topic

--- a/docs/Operation/kuber/AB/11.md
+++ b/docs/Operation/kuber/AB/11.md
@@ -2,6 +2,8 @@
 
 ## Ingress Controller
 
+### Requirement Resource
+
 - Deployment
 - ConfigMap
 - NodePort / LoadBalancer
@@ -12,6 +14,9 @@
   - RoleBinding
 
 ## Ingress Resources
+
+- Routing
+- SSL Configuration
 
 ## Installation
 
