Update ingress topic

--- a/docs/Operation/kuber/AB/11.md
+++ b/docs/Operation/kuber/AB/11.md
@@ -13,16 +13,22 @@
   - ClusterRole
   - RoleBinding
 
+### Deploy an Ingress Controller
+
 ## Ingress Resources
 
 - Routing
 - SSL Configuration
 
-## Installation
+## Configure Manager Tools
 
-### Install with HelmChart
+We have dozen configure manager tools for kubernetes.
 
-add HelmRepo
+But some of them is more popular, such as HashiCorp [Terraform], RedHat [Ansible] and Kubernetes native configure manager [Kustomize].
+
+### HelmChart
+
+#### Installation
 
 ```bash
 helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
@@ -51,3 +57,8 @@ check helm releases
 ```bash
 helm list -A
 ```
+
+<!-- links -->
+[Terraform]: https://developer.hashicorp.com/terraform/tutorials/kubernetes/kubernetes-provider
+[Ansible]: https://docs.ansible.com/ansible/2.8/modules/kubernetes_module.html
+[Kustomize]: https://kustomize.io/
