Move all pics into file kube_in_pic

--- a/docs/Operation/kuber/AB/05.md
+++ b/docs/Operation/kuber/AB/05.md
@@ -5,7 +5,11 @@
 - Define [Environment Variables] for a Container
 
 - Mapping Pod entry point to docker container commands
-![kuber-docker-epoint]
+
+  | Docker | Kubernetes |
+  | - | - |
+  | EntryPoint | command |
+  | CMD | args |
 
 ### Different method to define configs
 
@@ -117,9 +121,6 @@ There are many solution to install kubernetes cluster
 - Install via [KubeADM]
 - Install via [Kubespray]
 
-![kube-components]
-![cluster-versioning]
-
 ## [Update Cluster][update-cluster]
 
 Best practice for kube cluster is all the components have a same version,
@@ -128,8 +129,6 @@ but we also have different versioning according to this image
 API-Server must be a higher version in the cluster
 
 Kubernetes just supports 3 versions earlier than the current version in updating PATH
-
-![Update-patch-policy]
 
 <!-- http links -->
 [Environment Variables]: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
@@ -149,8 +148,3 @@ Kubernetes just supports 3 versions earlier than the current version in updating
 [KubeADM]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/
 [Kubespray]: https://github.com/kubespray
 [update-cluster]: https://kubernetes.io/docs/tasks/administer-cluster/cluster-upgrade/
-[kube-components]: ../../../assets/kuber/kinpic/S05-k8s-release.png
-[cluster-versioning]: ../../../assets/kuber/kinpic/S05-k8s-cluster-versioning.png
-[Update-patch-policy]: ../../../assets/kuber/kinpic/S05-k8s-version-update-support.png
-
-[kuber-docker-epoint]: ../../../assets/kuber/kinpic/S05-k8s-dcoker.png
