--- a/docs/Operation/kuber/AB/10.md
+++ b/docs/Operation/kuber/AB/10.md
@@ -57,6 +57,12 @@ KubeProxy use one of these three ways to handle traffic
 
 - **ipvs**: for clusters that has more than 10,000 services
 
+## DNS
+
+### Core DNS
+
+[Core-DNS] is like a `/etc/hosts` by continuously update names and IPs.
+
 <!-- links -->
 [MetaController]: https://metacontroller.github.io/metacontroller/
 [OperatorSDK]: https://sdk.operatorframework.io/
@@ -66,3 +72,4 @@ KubeProxy use one of these three ways to handle traffic
 [OpenStackCloud]: https://github.com/kubernetes/cloud-provider-openstack
 [CloudProvider]: https://github.com/kubernetes/cloud-provider
 [List of Kubernetes Components Ports]: https://kubernetes.io/docs/reference/networking/ports-and-protocols/
+[Core-DNS]: https://kubernetes.io/docs/tasks/administer-cluster/coredns/
