Add kubernetes plugins

--- a/docs/Operation/kuber/AB/11.md
+++ b/docs/Operation/kuber/AB/11.md
@@ -2,7 +2,7 @@
 
 ## Ingress Controller
 
-### Requirement Resource
+### Requirement Resource fro Ingress Controller
 
 - Deployment
 - ConfigMap
@@ -13,9 +13,11 @@
   - ClusterRole
   - RoleBinding
 
-### Deploy an Ingress Controller
+[watch schematic resource requirements]
 
-## Ingress Resources
+## Deploy an Ingress Controller
+
+### Ingress Resources
 
 - Routing
 - SSL Configuration
@@ -58,7 +60,19 @@ check helm releases
 helm list -A
 ```
 
+## Troubleshooting
+
+1. Application Failure
+2. ControlPlane Failure
+3. WorkerNode Failure
+
+### Application Failures
+
+
+
+
 <!-- links -->
 [Terraform]: https://developer.hashicorp.com/terraform/tutorials/kubernetes/kubernetes-provider
 [Ansible]: https://docs.ansible.com/ansible/2.8/modules/kubernetes_module.html
 [Kustomize]: https://kustomize.io/
+[watch schematic resource requirements]: ../kubernetes_in_picture.md#ingres-controller-resources
