--- a/docs/Operation/kuber/AB/11.md
+++ b/docs/Operation/kuber/AB/11.md
@@ -150,18 +150,18 @@ kubectl get nodes
 kubectl describe nodes <worker-node-name>
 ```
 
-2.1. If your worker node is on "NOT RAEDY" status, check your "Kubelet" first
+2.1. If your worker node is on 'NOT RAEDY' status, check your 'Kubelet' first
 
-2.2. Get more focus on "Conditions" column
+2.2. Get more focus on 'Conditions' column
 
 - Memory Pressure
 - Disk Pressure
 - PID Pressure
 
-2.3. If your node status is "UNKNOWN" that means the "Kubelet" could not connect to "API-Server"
+2.3. If your node status is 'UNKNOWN' that means the 'Kubelet' could not connect to 'API-Server'
 > check the kubelet via ssh
 
-**NOTE**: the "Best Practice" for this purpose is use monitoring tools, like ["Prometheus" via "Node Exporter"]
+**NOTE**: the 'Best Practice' for this purpose is use monitoring tools, like 'Prometheus' via 'Node Exporter'
 
 3. Check the Kubelet service status and follow it's log
 
