--- a/docs/Operation/kuber/AB/11.md
+++ b/docs/Operation/kuber/AB/11.md
@@ -173,11 +173,11 @@ journalctl -u kubelet -f
 4. Check the Kubelet Certificate
 
 ```bash
-openssl -x509 -in /var/lib/kubelet/worker-node-name.crt -text
+openssl x509 -in /var/lib/kubelet/pki/kubelet.crt -text -noout
 ```
 
-- **Issuer**: must be *KUBERNETES-CA*
-- **Organization**: must be *system:nodes*
+- **Issuer**: value must be 'KUBERNETES-CA'
+- **Organization**: value must be 'system:nodes'
 
 <!-- links -->
 [Terraform]: https://developer.hashicorp.com/terraform/tutorials/kubernetes/kubernetes-provider
