--- a/docs/Operation/kuber/AB/12.md
+++ b/docs/Operation/kuber/AB/12.md
@@ -4,5 +4,14 @@
 
 [kube-vip] provides Kubernetes clusters with a virtual IP and load balancer for both the control plane (for building a highly-available cluster) and Kubernetes Services of type LoadBalancer without relying on any external hardware or software.
 
+## Cert Manager
+
+[cert-manager] creates TLS certificates for workloads in your Kubernetes or OpenShift cluster and renews the certificates before they expire.
+
+## Custom Resource Definition
+
+Custom resources are extensions of the Kubernetes API. *[This page]* discusses when to add a custom resource to your Kubernetes cluster and when to use a standalone service. It describes the two methods for adding custom resources and how to choose between them.
 <!-- links -->
 [kube-vip]: https://kube-vip.io/
+[cert-manager]: https://cert-manager.io/docs/
+[This page]: https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/
