--- a/docs/Operation/kuber/AB/12.md
+++ b/docs/Operation/kuber/AB/12.md
@@ -11,7 +11,42 @@
 ## Custom Resource Definition
 
 Custom resources are extensions of the Kubernetes API. *[This page]* discusses when to add a custom resource to your Kubernetes cluster and when to use a standalone service. It describes the two methods for adding custom resources and how to choose between them.
+
+### Ingress via CertManager
+
+How to secure ingress via [cert manager]
+
+```yaml
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  annotations:
+    # add an annotation indicating the issuer to use.
+    cert-manager.io/cluster-issuer: nameOfClusterIssuer
+  name: myIngress
+  namespace: myIngress
+spec:
+  rules:
+  - host: example.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: myservice
+            port:
+              number: 80
+  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
+  - hosts:
+    - example.com
+    secretName: myingress-cert # < cert-manager will store the created certificate in this secret.
+```
+
+The *tls* and *annotation* field added to ingress
+
 <!-- links -->
 [kube-vip]: https://kube-vip.io/
 [cert-manager]: https://cert-manager.io/docs/
 [This page]: https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/
+[cert manager]: https://cert-manager.io/docs/usage/ingress/
