--- a/docs/Operation/kuber/AB/12.md
+++ b/docs/Operation/kuber/AB/12.md
@@ -4,6 +4,18 @@
 
 [kube-vip] provides Kubernetes clusters with a virtual IP and load balancer for both the control plane (for building a highly-available cluster) and Kubernetes Services of type LoadBalancer without relying on any external hardware or software.
 
+## Horizontal Pod Autoscaling
+
+### HPA
+
+In Kubernetes, a [HorizontalPodAutoscaler] automatically updates a workload resource (such as a Deployment or StatefulSet), with the aim of automatically scaling the workload to match demand.
+
+## Vertical Pod Autoscaler
+
+### VPA
+
+[Vertical Pod Autoscaler] (VPA) frees users from the necessity of setting up-to-date resource limits and requests for the containers in their pods. When configured, it will set the requests automatically based on usage and thus allow proper scheduling onto nodes so that appropriate resource amount is available for each pod. It will also maintain ratios between limits and requests that were specified in initial containers configuration.
+
 ## Cert Manager
 
 [cert-manager] creates TLS certificates for workloads in your Kubernetes or OpenShift cluster and renews the certificates before they expire.
@@ -50,3 +62,5 @@ The *tls* and *annotation* field added to ingress
 [cert-manager]: https://cert-manager.io/docs/
 [This page]: https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/
 [cert manager]: https://cert-manager.io/docs/usage/ingress/
+[HorizontalPodAutoscaler]: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
+[Vertical Pod Autoscaler]: https://github.com/kubernetes/autoscaler/tree/master/vertical-pod-autoscaler#contents
