Update cordon/drain differences

--- a/docs/Operation/kuber/AB/05.md
+++ b/docs/Operation/kuber/AB/05.md
@@ -113,6 +113,30 @@ kube-controller-manager --pod-eviction-timeout=5m0s
 
 - add tag NoSchedule to node
 
+### Difference Between Cordon & Drain
+
+#### Cordon
+
+- Mark a node as unschedulable, which prevents new pods from being scheduled on that node.
+- Existing pods continue to run on the node, but no new pods will be scheduled onto it.
+
+#### Drain
+
+- Evacuate all workloads (pods) from a node, preparing it for maintenance (e.g., shutting it down or upgrading).
+- All non-daemonset and non-static pods are gracefully evicted from the node, which involves:
+- Rescheduling the evicted pods onto other available nodes (depending on pod tolerations and node availability)
+- Daemonset pods (like monitoring agents) and pods without replica sets (i.e., pods that cannot be rescheduled) are not affected.
+
+#### Key Differences
+
+| Feature | cordon | drain |
+| - | - | - |
+| **Pods on the Node**| Existing pods stay running | Existing pods are evicted/moved |
+| **New Pods** | No new pods are scheduled | No new pods are scheduled |
+| **Effect on Running Pods** | Running pods are not affected | Running pods are gracefully evicted |
+| **DaemonSet Pods** | Not affected | Not evicted by default (needs --force flag) |
+| **Use Case** | Prevent new workloads temporarily | Maintenance or permanent removal |
+
 ## Kubernetes Releases
 
 There are many solution to install kubernetes cluster
