Fix mkdocs error

--- a/docs/Operation/kuber/AB/04.md
+++ b/docs/Operation/kuber/AB/04.md
@@ -198,6 +198,7 @@ Traditional tools like Jenkins, GitLab couldn't follow the state of code.
 So we need to new tools that can follow changes over code and compares it to running state.
 
 ArgoCD and FluxCD is the populated tools for this.
+
 <!-- links -->
 [nodeselector]:https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
 [nodes]: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#built-in-node-labels
@@ -209,7 +210,7 @@ ArgoCD and FluxCD is the populated tools for this.
 [example]: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#example-1
 [DaemonSet]: https://kubernetes.io/docs/concepts/workloads/controllers/daemonset
 [Static Pods]: https://kubernetes.io/docs/tasks/configure-pod-container/static-pod
-[kubelet]: 2.md#kubelet
+[kubelet]: 2.md#Kubelet
 [schedular]: 2.md#kube-scheduler
 [controller]: 2.md#kube-controller-manager
 [**cAdvisor**]: https://kubernetes.io/docs/tasks/debug/debug-cluster/resource-metrics-pipeline
