Update ApiServer certificate

--- a/docs/Operation/kuber/AB/07.md
+++ b/docs/Operation/kuber/AB/07.md
@@ -114,23 +114,41 @@ All kubernetes [authentication types]
 - kubeproxy.key
 - kubeproxy.crt
 
+## Update Exists Certificates
+
+### Update the old apiserver cert file
+
+#### Get the cert file context
+
+Full view
+
+```bash
+openssl x509 -in apiserver.crt -noout -text
+```
+
+Key filter view
+
+```bash
+openssl x509 -in apiserver.crt -noout -ext subjectAltName
+```
+
 ## Generate Certificates
 
 ### CA
 
-1: generate key `ca.key`
+1: generate a private key file `ca.key`
 
 ```bash
 openssl genrsa -out ca.key 2048
 ```
 
-2: certificate sign request `ca.csr`
+2: create a CertificateSignRequest file `ca.csr` by `ca.key`
 
 ```bash
 openssl req -new -key ca.key -subj "/CN=KUBERNETES-CA" -out ca.csr
 ```
 
-3: sign Certificate `ca.crt`
+3: sign the created `ca.csr` and create `ca.crt` files
 
 ```bash
 openssl x509 -req -in ca.csr -signkey ca.key -out ca.crt
@@ -138,19 +156,19 @@ openssl x509 -req -in ca.csr -signkey ca.key -out ca.crt
 
 ### Admin
 
-1: generate key `admin.key`
+1: generate a private key file `admin.key`
 
 ```bash
 openssl genrsa -out admin.key 2048
 ```
 
-2: certificate sign request `admin.csr`
+2: create a CertificateSignRequest file `admin.csr` by `admin.key`
 
 ```bash
 openssl req -new -key admin.key -subj "/CN=kube-admin \O=system:masters" -out admin.csr
 ```
 
-3: sign Certificate `admin.crt`
+3: sign the created `admin.csr` and create `admin.crt` file
 
 ```bash
 openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
@@ -158,45 +176,80 @@ openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
 
 ### KubeAPIServer
 
-1: generate key `apiserver.key`
+1: go to the kubernetes `ssl` directory
+
+```bash
+cd /etc/kubernetes/ssl/
+```
+
+2: generate a private key file `apiserver.key`
 
 ```bash
 openssl genrsa -out apiserver.key 2048
 ```
 
-2: certificate sign request `apiserver.csr`
+3: create a CertificateSignRequest `apiserver.csr` by `apiserver.key`
 
 ```bash
-openssl req -new -key apiserver.key -subj "/CN=kube-apiserver" -out apiserver.csr -config openssl.cnf
+openssl req -new -key apiserver.key \
+-out apiserver.csr -config cert.cfg
 ```
 
-2.1. openssl.cfg
+4: sign the created `apiserver.csr` and create `apiserver.crt` file
 
-```cnf
-[req]
+```bash
+openssl x509 -req -in apiserver.csr \
+-days 3650 -extensions v3_req \
+-CA ca.crt -CAkey ca.key -CAcreateserial \
+-out apiserver.crt \
+-extfile cert.cfg
+```
+
+**Note:** `-subj "/CN=kube-apiserver"` puts in the cfg file.
+
+> openssl.cfg
+
+```ini
+[ req ]
+default_bits = 2048
+prompt = no
+default_md = sha256
+distinguished_name = dn
 req_extensions = v3_req
 
-[ v3_reqy ]
-basicConstraints = CA:FALSE
-keyUsage = notRepudiation
+[ dn ]
+CN = kube-apiserver
+
+[ v3_req ]
+keyUsage = critical, digitalSignature, keyEncipherment
+extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
 
-[alt_names]
+[ alt_names ]
 DNS.1 = kubernetes
 DNS.2 = kubernetes.default
 DNS.3 = kubernetes.default.svc
 DNS.4 = kubernetes.default.svc.cluster.local
-IP.1 = 10.96.0.1
-IP.2 = 192.168.1.10
-IP.3 = 172.17.0.87
-IP.4 = 5.96.44.165
+DNS.5 = lb-apiserver.kubernetes.local
+DNS.6 = localhost
+DNS.7 = master
+DNS.8 = master.cluster.local
+IP.1 = 10.233.0.1
+IP.2 = 192.168.197.12
+IP.3 = 127.0.0.1
+IP.4 = 192.168.196.12
+IP.5 = 192.168.197.11
 ```
 
-3: sign Certificate `admin.crt`
+**Note:** You had better to check the old DNS and IP addresses exact the verify section.
+
+5: Verify the new certificate `apiserver.crt`
 
 ```bash
-openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
+openssl x509 -in apiserver.crt -text -noout | grep -A 1 "Subject Alternative Name"
 ```
+
+6: Check the apiserver certificates
 
 ![kube-api-server-certs-conf]
 
