Update ApiServer certificate

--- a/docs/Operation/kuber/AB/07.md
+++ b/docs/Operation/kuber/AB/07.md
@@ -188,7 +188,7 @@ cd /etc/kubernetes/ssl/
 openssl genrsa -out apiserver.key 2048
 ```
 
-3: create a CertificateSignRequest `apiserver.csr` by `apiserver.key`
+3: create a ***C***ertificate***S***igning***R***equest `apiserver.csr` by `apiserver.key`
 
 ```bash
 openssl req -new -key apiserver.key \
@@ -207,7 +207,7 @@ openssl x509 -req -in apiserver.csr \
 
 **Note:** `-subj "/CN=kube-apiserver"` puts in the cfg file.
 
-> openssl.cfg
+> cert.cfg
 
 ```ini
 [ req ]
@@ -377,7 +377,7 @@ kubeadm certs renew all
 
 ### Certificate API Flow
 
-1: User Create CertificateSigningRequest Object
+1: User Create ***C***ertificate***S***igning***R***equest Object
 
 2: Review Requests by Admin
 
