--- a/docs/Operation/kuber/AB/07.md
+++ b/docs/Operation/kuber/AB/07.md
@@ -136,19 +136,19 @@ openssl x509 -in apiserver.crt -noout -ext subjectAltName
 
 ### CA
 
-1: generate a private key file `ca.key`
+1: generate a new private key file `ca.key`
 
 ```bash
 openssl genrsa -out ca.key 2048
 ```
 
-2: create a CertificateSignRequest file `ca.csr` by `ca.key`
+2: create a new CSR file `ca.csr` by `ca.key`
 
 ```bash
 openssl req -new -key ca.key -subj "/CN=KUBERNETES-CA" -out ca.csr
 ```
 
-3: sign the created `ca.csr` and create `ca.crt` files
+3: sign the created `ca.csr` and create a new `ca.crt` files
 
 ```bash
 openssl x509 -req -in ca.csr -signkey ca.key -out ca.crt
@@ -156,19 +156,19 @@ openssl x509 -req -in ca.csr -signkey ca.key -out ca.crt
 
 ### Admin
 
-1: generate a private key file `admin.key`
+1: generate a new private key file `admin.key`
 
 ```bash
 openssl genrsa -out admin.key 2048
 ```
 
-2: create a CertificateSignRequest file `admin.csr` by `admin.key`
+2: create a new CSR file `admin.csr` by `admin.key`
 
 ```bash
 openssl req -new -key admin.key -subj "/CN=kube-admin \O=system:masters" -out admin.csr
 ```
 
-3: sign the created `admin.csr` and create `admin.crt` file
+3: sign the created `admin.csr` and create a new `admin.crt` file
 
 ```bash
 openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
@@ -182,20 +182,20 @@ openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
 cd /etc/kubernetes/ssl/
 ```
 
-2: generate a private key file `apiserver.key`
+2: generate a new private key file `apiserver.key`
 
 ```bash
 openssl genrsa -out apiserver.key 2048
 ```
 
-3: create a ***C***ertificate***S***igning***R***equest `apiserver.csr` by `apiserver.key`
+3: create a new CSR `apiserver.csr` by `apiserver.key`
 
 ```bash
 openssl req -new -key apiserver.key \
 -out apiserver.csr -config cert.cfg
 ```
 
-4: sign the created `apiserver.csr` and create `apiserver.crt` file
+4: sign the created `apiserver.csr` and create a new `apiserver.crt` file
 
 ```bash
 openssl x509 -req -in apiserver.csr \
@@ -255,19 +255,19 @@ openssl x509 -in apiserver.crt -text -noout | grep -A 1 "Subject Alternative Nam
 
 ### Kube-Scheduler
 
-1: generate key `scheduler.key`
+1: generate a new key file `scheduler.key`
 
 ```bash
 openssl genrsa -out scheduler.key 2048
 ```
 
-2: certificate sign request `scheduler.csr`
+2: create a new CSR `scheduler.csr` by `scheduler.key`
 
 ```bash
 openssl req -new -key scheduler.key -subj "/CN=kube-scheduler \O=system:kube-scheduler" -out scheduler.csr
 ```
 
-3: sign Certificate `scheduler.crt`
+3: sign the created `scheduler.csr` and create a new ``scheduler.crt` file
 
 ```bash
 openssl x509 -req -in scheduler.csr -CA ca.crt -CAkey ca.key -out scheduler.crt
@@ -275,19 +275,19 @@ openssl x509 -req -in scheduler.csr -CA ca.crt -CAkey ca.key -out scheduler.crt
 
 ### Kube Controller-Manager
 
-1: generate key `controller-manager.key`
+1: generate a new key file `controller-manager.key`
 
 ```bash
 openssl genrsa -out controller-manager.key 2048
 ```
 
-2: certificate sign request `controller-manager.csr`
+2: create a new CSR `controller-manager.csr` by `controller-manager.key`
 
 ```bash
 openssl req -new -key controller-manager.key -subj "/CN=kube-controller-manager \O=system:kube-controller-manager" -out controller-manager.csr
 ```
 
-3: sign Certificate `controller-manager.crt`
+3: sign the created `controller-manager.csr` and create a new `controller-manager.crt` file
 
 ```bash
 openssl x509 -req -in controller-manager.csr -CA ca.crt -CAkey ca.key -out controller-manager.crt
@@ -295,19 +295,19 @@ openssl x509 -req -in controller-manager.csr -CA ca.crt -CAkey ca.key -out contr
 
 ### ETCd Servers (does not test it)
 
-1: generate key `etcdserver.key`
+1: generate a new key file `etcdserver.key`
 
 ```bash
 openssl genrsa -out etcdserver.key 2048
 ```
 
-2: certificate sign request `etcdserver.csr`
+2: create a new CSR `etcdserver.csr` by `etcdserver.key`
 
 ```bash
 openssl req -new -key etcdserver.key -subj "/CN=etcdserver \O=etcd-server" -out etcdserver.csr
 ```
 
-3: sign Certificate `etcdserver.crt`
+3: sign the created `etcdserver.csr` and create a new `etcdserver.crt`
 
 ```bash
 openssl x509 -req -in etcdserver.csr -CA ca.crt -CAkey ca.key -out etcdserver.crt
@@ -315,19 +315,19 @@ openssl x509 -req -in etcdserver.csr -CA ca.crt -CAkey ca.key -out etcdserver.cr
 
 ### Kubelet
 
-1: generate key `kubelet.key`
+1: generate a new key file `kubelet.key`
 
 ```bash
 openssl genrsa -out kubelet.key 2048
 ```
 
-2: certificate sign request `kubelet.csr`
+2: generate a new key file  `kubelet.csr` by `kubelet.key`
 
 ```bash
 openssl req -new -key kubelet.key -subj "/CN=kubelet \O=system:kubelet" -out kubelet.csr
 ```
 
-3: sign Certificate `kubelet.crt`
+3: sign the created `kubelet.csr` and create a new `kubelet.crt`
 
 ```bash
 openssl x509 -req -in kubelet.csr -CA ca.crt -CAkey ca.key -out kubelet.crt
@@ -339,19 +339,19 @@ Kubelet client role certificate
 
 ### Kube Proxy
 
-1: generate key `kube-proxy.key`
+1: generate a new key file `kube-proxy.key`
 
 ```bash
 openssl genrsa -out kube-proxy.key 2048
 ```
 
-2: certificate sign request `kube-proxy.csr`
+2: generate a new key file `kube-proxy.csr` by `kube-proxy.key`
 
 ```bash
 openssl req -new -key kube-proxy.key -subj "/CN=kube-proxy \O=system:kube-proxy" -out kube-proxy.csr
 ```
 
-3: sign Certificate `kube-proxy.crt`
+3: sign the created `kube-proxy.csr` and create a new `kube-proxy.crt`
 
 ```bash
 openssl x509 -req -in kube-proxy.csr -CA ca.crt -CAkey ca.key -out kube-proxy.crt
@@ -377,7 +377,7 @@ kubeadm certs renew all
 
 ### Certificate API Flow
 
-1: User Create ***C***ertificate***S***igning***R***equest Object
+1: User Create `Certificate Signing Request` Object
 
 2: Review Requests by Admin
 
