Add fetch master ca.crt hash value

--- a/docs/Operation/kuber/AB/06.md
+++ b/docs/Operation/kuber/AB/06.md
@@ -209,21 +209,38 @@ sudo apt-mark hold kubelet kubeadm kubectl containerd ...
 
 ### Join a Worker
 
-```bash
-# Master node
+#### On Master node
 
+- Get cluster information to fetch `MASTER_IP` and `MASTER_PORT`
+
+```bash
 ## get master node IP addr
 kubectl cluster-info
+```
 
-## get endpoints list
+- Get endpoints list
+
+```bash
 kubectl get endpoints -n kube-system
+```
 
-## get token from master
-kubeadm token list
+- Get `TOKEN` from the master
 
-# Worker node
+```bash
+kubeadm token list/create
+```
 
-## join a worker to master
+- Get the ca `HASH` from the master
+
+```bash
+openssl x509 -pubkey in /etc/kubernetes/ssl/ca.crt | openssl rsa -pubin -outfrom der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.*//'
+```
+
+#### On Worker node
+
+- Join a worker to master
+
+```bash
 kubeadm join $MASTER_IP:$MASTER_PORT --token $TOKEN --discovery-token-ca-cert-hash sha256:$HASH
 ```
 
