Update kubeadm init/join

--- a/docs/Operation/kuber/AB/06.md
+++ b/docs/Operation/kuber/AB/06.md
@@ -207,7 +207,18 @@ kubectl get --all-namespace -o yaml > all-deploy-services.yaml
 sudo apt-mark hold kubelet kubeadm kubectl containerd ...
 ```
 
-### Join a Worker
+## Join Nodes
+
+### Initialize master node to connect to cluster
+
+```bash
+kubeadm init \
+--kubernetes-version $KUBERNETES_VERSION \
+--apiserver-advertise-address $MASTERNODE_IP \
+--pod-network-cidr 10.244.0.0/16
+```
+
+### Join a Worker Node
 
 #### On Master node
 
@@ -233,7 +244,9 @@ kubeadm token list/create
 - Get the ca `HASH` from the master
 
 ```bash
-openssl x509 -pubkey in /etc/kubernetes/ssl/ca.crt | openssl rsa -pubin -outfrom der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.*//'
+openssl x509 -in /etc/kubernetes/pki/ca.crt -pubkey -noout | openssl pkey -pubin -outform DER | openssl dgst -sha256 | cut -d' ' -f2
+# or
+openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* //'
 ```
 
 #### On Worker node
