--- a/docs/Operation/kuber/AB/07.md
+++ b/docs/Operation/kuber/AB/07.md
@@ -198,47 +198,50 @@ openssl req -new -key apiserver.key \
 4: sign the created `apiserver.csr` and create a new `apiserver.crt` file
 
 ```bash
-openssl x509 -req -in apiserver.csr \
--days 3650 -extensions v3_req \
--CA ca.crt -CAkey ca.key -CAcreateserial \
--out apiserver.crt \
--extfile cert.cfg
+openssl req -x509 \
+-days 3650 \
+-key apiserver.key \
+-CA ca.crt -CAkey ca.key \
+-extensions v3_req \
+-config cert.conf \
+-out apiserver.crt
 ```
 
-**Note:** `-subj "/CN=kube-apiserver"` puts in the cfg file.
+**Note:** `-subj "/CN=kubernetes"` puts in the config file.
 
-> cert.cfg
+> tls.conf
 
 ```ini
 [ req ]
-default_bits = 2048
-prompt = no
-default_md = sha256
-distinguished_name = dn
-req_extensions = v3_req
+default_bits       = 2048
+default_md         = sha256
+distinguished_name = req_distinguished_name
+req_extensions     = v3_req
+prompt             = no
+default_days       = 3651
 
-[ dn ]
-CN = kube-apiserver
+[ req_distinguished_name ]
+CN = kubernetes
 
 [ v3_req ]
 keyUsage = critical, digitalSignature, keyEncipherment
 extendedKeyUsage = serverAuth
+basicConstraints = critical, CA:FALSE
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = kubernetes
-DNS.2 = kubernetes.default
-DNS.3 = kubernetes.default.svc
-DNS.4 = kubernetes.default.svc.cluster.local
-DNS.5 = lb-apiserver.kubernetes.local
-DNS.6 = localhost
-DNS.7 = master
-DNS.8 = master.cluster.local
-IP.1 = 10.233.0.1
-IP.2 = 192.168.197.12
-IP.3 = 127.0.0.1
-IP.4 = 192.168.196.12
-IP.5 = 192.168.197.11
+DNS.1 = kubernetes.default
+DNS.2 = kubernetes.default.svc
+DNS.3 = kubernetes.default.svc.cluster.local
+DNS.4 = lb-apiserver.kubernetes.local
+DNS.5 = localhost
+DNS.6 = master
+DNS.7 = master.cluster.local
+IP.1  = 10.233.0.1
+IP.2  = 192.168.197.12
+IP.3  = 127.0.0.1
+IP.4  = 192.168.196.12
+IP.5  = 192.168.197.11
 ```
 
 **Note:** You had better to check the old DNS and IP addresses exact the verify section.
