Update ch 8 indents

--- a/docs/SRE/GoogleSREBook/partII-principals/08.ReleaseEngineering.md
+++ b/docs/SRE/GoogleSREBook/partII-principals/08.ReleaseEngineering.md
@@ -28,47 +28,47 @@ Highlight the importance of **hermetic builds**, **automation**, and the **balan
 
 1. **Self-Service Model**:
 
-   - Teams own their release processes via automated tools (e.g., **Rapid**).
-   - Enables high velocity with minimal manual intervention.
+    - Teams own their release processes via automated tools (e.g., **Rapid**).
+    - Enables high velocity with minimal manual intervention.
 
 2. **High Velocity**:
 
-   - Frequent releases (e.g., hourly builds) reduce delta between versions, easing testing and troubleshooting.
-   - **"Push on Green"**: Deploy automatically when tests pass.
+    - Frequent releases (e.g., hourly builds) reduce delta between versions, easing testing and troubleshooting.
+    - **"Push on Green"**: Deploy automatically when tests pass.
 
 3. **Hermetic Builds**:
 
-   - Builds are **isolated** from external dependencies (e.g., libraries, tools).
-   - Ensures reproducibility: same code + same revision = identical binaries.
-   - **Cherry-picking**: Fix bugs in production by rebuilding the original revision with specific changes.
+    - Builds are **isolated** from external dependencies (e.g., libraries, tools).
+    - Ensures reproducibility: same code + same revision = identical binaries.
+    - **Cherry-picking**: Fix bugs in production by rebuilding the original revision with specific changes.
 
 4. **Policy Enforcement**:
-   - Security via **access controls** (code reviews, gated operations).
-   - Audit trails track changes (e.g., who approved a cherry-pick).
+    - Security via **access controls** (code reviews, gated operations).
+    - Audit trails track changes (e.g., who approved a cherry-pick).
 
 ### **3. Tools & Workflow**
 
 - **Blaze/Bazel**:
 
-  - Google’s build tool for compiling code (C++, Java, Go, etc.).
-  - Defines dependencies and build targets.
+    - Google’s build tool for compiling code (C++, Java, Go, etc.).
+    - Defines dependencies and build targets.
 
 - **Rapid**:
 
-  - Automates releases using **blueprints** (config files defining build, test, deployment rules).
-  - Integrates with **Borg** for scalable execution.
-  - Workflow:
-      1. Create a release branch from the mainline.
-      2. Compile code and run tests in parallel.
-      3. Deploy via **canary** (small rollout) or full production push.
+    - Automates releases using **blueprints** (config files defining build, test, deployment rules).
+    - Integrates with **Borg** for scalable execution.
+    - Workflow:
+        1. Create a release branch from the mainline.
+        2. Compile code and run tests in parallel.
+        3. Deploy via **canary** (small rollout) or full production push.\*\*\*\*
 
 - **Midas Package Manager (MPM)**:
 
-  - Packages binaries/configurations with unique hashes and labels (e.g., `canary`, `production`).
-  - Labels auto-update to the latest version (e.g., deploying `canary` always fetches the newest labeled package).
+    - Packages binaries/configurations with unique hashes and labels (e.g., `canary`, `production`).
+    - Labels auto-update to the latest version (e.g., deploying `canary` always fetches the newest labeled package).
 
 - **Sisyphus**:
-  - SRE-developed rollout framework for complex deployments (e.g., phased geographic rollouts).
+    - SRE-developed rollout framework for complex deployments (e.g., phased geographic rollouts).
 
 ### **4. Configuration Management**
 
@@ -76,31 +76,31 @@ Strategies to avoid instability:
 
 1. **Mainline Configuration**:
 
-   - Store configs in the main repository; decouples binary releases from config changes.
-   - Risk: Skew between checked-in and running configs.
+    - Store configs in the main repository; decouples binary releases from config changes.
+    - Risk: Skew between checked-in and running configs.
 
 2. **Configs in MPM Packages**:
 
-   - Bundle configs with binaries for simplicity.
+    - Bundle configs with binaries for simplicity.
 
 3. **Configuration Packages**:
 
-   - Snapshot configs alongside binaries using **build IDs**.
-   - Enables independent updates (e.g., fix a flag without rebuilding the binary).
+    - Snapshot configs alongside binaries using **build IDs**.
+    - Enables independent updates (e.g., fix a flag without rebuilding the binary).
 
 4. **External Stores**:
-   - Dynamic configs stored in **Chubby**, **Bigtable**, or source-based filesystems.
+    - Dynamic configs stored in **Chubby**, **Bigtable**, or source-based filesystems.
 
 ### **5. Deployment Strategies**
 
 - **Risk-Based Rollouts**:
 
-  - **Canary**: Deploy to small clusters first.
-  - **Exponential**: Rapid expansion for user-facing services.
-  - **Multi-Day**: Gradual rollouts for critical infrastructure.
+    - **Canary**: Deploy to small clusters first.
+    - **Exponential**: Rapid expansion for user-facing services.
+    - **Multi-Day**: Gradual rollouts for critical infrastructure.
 
 - **Rollback**:
-  - Automated via **Sisyphus** or MPM labels (revert to a prior version).
+    - Automated via **Sisyphus** or MPM labels (revert to a prior version).
 
 ### **6. Key Takeaways**
 
